--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.3",
     "axios": "^1.3.4",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
